--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,11 @@
                 </configuration>
             </plugin>
         </plugins>
+
+	<testResources>
+            <testResource>
+                <directory>data</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
