--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         
         <javafx.version>8.0.171</javafx.version>
         
-        <main.class>softwareeng.biblioteca.application.MainApp</main.class>
+        <main.class>softwareeng.biblioteca.application.Main</main.class>
     </properties>
 
     <dependencies>
